--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -52,6 +52,7 @@ body{
 	min-height : 100vh;
 	min-width : 100vw;
 	background-color : black!important;
+	overflow: hidden;
 }
 ::-webkit-scrollbar {
     width: 0px;
