--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -474,6 +474,7 @@ if not then top right*/
           text-shadow: 0px 0px 2px #a4a4a4;
           letter-spacing: 2px;
           text-transform: uppercase;
+          opacity: 0;
           -webkit-transition: all 1s ease-out;
           -moz-transition: all 1s ease-out;
           -ms-transition: all 1s ease-out;
@@ -482,6 +483,7 @@ if not then top right*/
         .project-wrapper .project .project-content .item .item-content {
           font-family: Abel;
           font-size: 14px;
+          opacity: 0;
           -webkit-transition: all 1s ease-out;
           -moz-transition: all 1s ease-out;
           -ms-transition: all 1s ease-out;
