--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -573,7 +573,7 @@ $project-page-height : $num-project * $project-height;
 					text-shadow: 0px 0px 2px #a4a4a4;
 					letter-spacing: 2px;
 					text-transform: uppercase;
-					// opacity: 0;
+					opacity: 0;
 					-webkit-transition: all 1s ease-out;
 					-moz-transition: all 1s ease-out;
 					-ms-transition: all 1s ease-out;
@@ -583,7 +583,7 @@ $project-page-height : $num-project * $project-height;
 				.item-content{
 					font-family: Abel;
 					font-size: 14px;
-					// opacity: 0;
+					opacity: 0;
 					-webkit-transition: all 1s ease-out;
 					-moz-transition: all 1s ease-out;
 					-ms-transition: all 1s ease-out;
