--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -46,7 +46,20 @@ a {
   color: white; }
 
 /* End of css reseter */
+.general-font {
+  font-family: 'Abel', sans-serif; }
+
+.big-title {
+  font-family: 'Rajdhani', sans-serif; }
+
+.title {
+  font-family: 'Exo', sans-serif; }
+
+.small-title {
+  font-family: 'Source Code Pro', monospace; }
+
 body {
+  @extends .general-font;
   min-height: 100vh;
   min-width: 100vw;
   background-color: black !important;
@@ -151,8 +164,6 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
-  #slide3 .item .item-content {
-    font-family: 'Abel', sans-serif; }
 
 .slidemain {
   position: fixed !important;
@@ -171,7 +182,7 @@ if not then top right*/
   right: 0;
   transform: translateY(-10%);
   font-size: 13px;
-  font-family: 'Source Code Pro', monospace; }
+  @extends .small-title; }
   .nav-bar > ul {
     text-align: right; }
     .nav-bar > ul > li {
@@ -255,12 +266,11 @@ if not then top right*/
       position: absolute;
       color: white;
       z-index: 2;
-      font-family: 'Rajdhani', sans-serif;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
       .slide .slide-content .item .item-title {
-        font-family: 'Exo', sans-serif;
+        @extends .title;
         font-size: 20px; }
       .slide .slide-content .item .item-content {
         font-size: 16px; }
@@ -297,7 +307,7 @@ if not then top right*/
       color: white;
       z-index: 2;
       font-size: 26px;
-      font-family: 'Rajdhani', sans-serif;
+      @extends .big-title;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
@@ -374,7 +384,6 @@ if not then top right*/
   color: white;
   padding: 8px;
   font-size: 14px;
-  font-family: 'Abel', sans-serif;
   -webkit-transition: all 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
   -moz-transition: all 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
   -ms-transition: all 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
@@ -475,7 +484,7 @@ if not then top right*/
         left: 50%;
         transform: translate(-50%, -60%); }
         .project-wrapper .project .project-content .item .item-title {
-          font-family: 'Raleway', sans-serif;
+          @extends .title;
           font-size: 18px;
           text-shadow: 0px 0px 2px #a4a4a4;
           letter-spacing: 2px;
@@ -487,7 +496,6 @@ if not then top right*/
           -o-transition: all 1s ease-out;
           transition: all 1s ease-out; }
         .project-wrapper .project .project-content .item .item-content {
-          font-family: Abel;
           font-size: 14px;
           opacity: 0;
           -webkit-transition: all 1s ease-out;
@@ -551,7 +559,7 @@ if not then top right*/
     bottom: -20%;
     font-size: 18px;
     transform: translate(-50%, -50%);
-    font-family: 'Rajdhani', sans-serif;
+    @extends .small-titles;
     letter-spacing: 4px;
     animation: blink 2s linear infinite;
     -webkit-transition: all 1s linear;
@@ -587,7 +595,6 @@ if not then top right*/
       transition: all 1s ease-in-out;
       overflow: hidden; }
       .preloader-wrapper .preloader .before > div {
-        font-family: 'Abel';
         font-size: 20px;
         position: absolute;
         top: 50%;
