--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -46,20 +46,19 @@ a {
   color: white; }
 
 /* End of css reseter */
-.general-font {
+.general-font, body {
   font-family: 'Abel', sans-serif; }
 
-.big-title {
+.big-title, .slide .slide-content .tagline {
   font-family: 'Rajdhani', sans-serif; }
 
-.title {
+.title, .slide .slide-content .item .item-title, .project-wrapper .project .project-content .item .item-title {
   font-family: 'Exo', sans-serif; }
 
-.small-title {
+.small-title, .nav-bar {
   font-family: 'Source Code Pro', monospace; }
 
 body {
-  @extends .general-font;
   min-height: 100vh;
   min-width: 100vw;
   background-color: black !important;
@@ -181,8 +180,7 @@ if not then top right*/
   top: 10%;
   right: 0;
   transform: translateY(-10%);
-  font-size: 13px;
-  @extends .small-title; }
+  font-size: 13px; }
   .nav-bar > ul {
     text-align: right; }
     .nav-bar > ul > li {
@@ -270,7 +268,6 @@ if not then top right*/
       left: 50%;
       transform: translate(-50%, -50%); }
       .slide .slide-content .item .item-title {
-        @extends .title;
         font-size: 20px; }
       .slide .slide-content .item .item-content {
         font-size: 16px; }
@@ -307,7 +304,6 @@ if not then top right*/
       color: white;
       z-index: 2;
       font-size: 26px;
-      @extends .big-title;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
@@ -484,7 +480,6 @@ if not then top right*/
         left: 50%;
         transform: translate(-50%, -60%); }
         .project-wrapper .project .project-content .item .item-title {
-          @extends .title;
           font-size: 18px;
           text-shadow: 0px 0px 2px #a4a4a4;
           letter-spacing: 2px;
@@ -559,7 +554,6 @@ if not then top right*/
     bottom: -20%;
     font-size: 18px;
     transform: translate(-50%, -50%);
-    @extends .small-titles;
     letter-spacing: 4px;
     animation: blink 2s linear infinite;
     -webkit-transition: all 1s linear;
