--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -110,13 +110,13 @@ body{
 
 #slide1{
 	.background{
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	min-width: calc(100% + 50px);
-	min-height: 100vh;
-	z-index: 0;
-	transform:translateX(-50%) translateY(-50%);
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		min-width: calc(100% + 50px);
+		min-height: 100vh;
+		z-index: 0;
+		transform:translateX(-50%) translateY(-50%);
 
 		+ div{
 		    background-color: rgb(40,40,40);
@@ -137,16 +137,7 @@ body{
 	-o-background-size: cover;
 	background-size: cover;
 
-    // Special Configuration for this slide
-    .skybluelayer{
-    	background-color: #424c6b;
-	    opacity: 0.3;
-	    position: absolute;
-	    min-width: 100%;
-	    min-height: 100%;
-	    z-index: 5;
-    }
-
+	/*special configuration*/
     .slide-content{
     	top: 65%!important;
     	transform: translate(-50%,-35%);
@@ -160,14 +151,6 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
-	// Special Configuration for this slide
-	.item{
-	    .item-title{
-	    }
-	    .item-content{
-	    }
-	}
 }
 
 .slidemain{
@@ -303,9 +286,11 @@ if not then top right*/
 			transform: translate(-50%,-50%);
 			.item-title{
 				@extend .title;
+				margin : 5px 0;
 				font-size: 20px;
 			}
 			.item-content{
+				line-height : 1.15;
 				font-size: 16px;
 				> span{
 					font-size: 10px;
@@ -374,6 +359,14 @@ if not then top right*/
 			}
 		}
 	}
+    .skybluelayer{
+    	background-color: #424c6b;
+	    opacity: 0.3;
+	    position: absolute;
+	    min-width: 100%;
+	    min-height: 100%;
+	    z-index: 5;
+    }
 }
 @media only screen and (min-width: 600px){
 	.slide .slide-content 
