--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -17,7 +17,7 @@
             (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>要查看<a href="http://disqus.com/?ref_noscript"> Disqus </a>评论，请启用 JavaScript</noscript>
+    <noscript>In order to view<a href="http://disqus.com/?ref_noscript"> Disqus </a>comment, Please activate JavaScript</noscript>
     
   {% elsif site.comment.duoshuo %}
     <div class="ds-thread" data-thread-key="{{ page.url }}" data-title="{{ page.title }}" data-url="{{ page.url | prepend: site.baseurl | prepend: site.url }}"></div>
