--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,6 +9,7 @@
     };
 
     var disqus_shortname = '{{ site.comment.disqus }}';
+    console.log(disqus_shortname);
     
     (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
