--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -10,6 +10,7 @@
 
     var disqus_shortname = '{{ site.comment.disqus }}';
     console.log(disqus_shortname);
+    console.log("{{ page.url | prepend: site.baseurl | prepend: site.url }}");
     
     (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
