--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,10 +53,10 @@ a {
   font-family: 'Rajdhani', sans-serif; }
 
 .title, .slide .slide-content .item .item-title, .project-wrapper .project .project-content .item .item-title {
-  font-family: 'Exo', sans-serif; }
+  font-family: 'Rajdhani', sans-serif; }
 
 .small-title, .nav-bar {
-  font-family: 'Source Code Pro', monospace; }
+  font-family: 'Abel', sans-serif; }
 
 body {
   min-height: 100vh;
@@ -140,7 +140,7 @@ body {
 
 #slide2 {
   top: 100%;
-  background: url(../img/pic1.jpg) no-repeat center center fixed;
+  background: url(../images/pic1.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
