--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,10 +55,10 @@ a{
 	font-family : 'Rajdhani', sans-serif;
 }
 .title{
-	font-family: 'Exo', sans-serif;
+	font-family: 'Rajdhani', sans-serif;
 }
 .small-title{
-	font-family: 'Source Code Pro', monospace;
+	font-family: 'Abel', sans-serif;
 }
 
 body{
@@ -131,7 +131,7 @@ body{
 
 #slide2{
 	top : 100%;
-	background: url(../img/pic1.jpg) no-repeat center center fixed;
+	background: url(../images/pic1.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
